<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">jia_hui_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_next">Next</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign up</string>
<string name="msg_confirm_passwor">Confirm password</string>
<string name="msg_already_have_an">Already have an account? Sign in</string>
<string name="lbl_we">We</string>
<string name="msg_human_resour">&#128222; Human Resource</string>
<string name="lbl_fr">Fr</string>
<string name="lbl_sign_in">Sign in</string>
<string name="lbl_programming">⌨️ Programming</string>
<string name="lbl_mo">Mo</string>
<string name="msg_forgot_password">forgot password?</string>
<string name="lbl_cancel">Cancel</string>
<string name="lbl_username">Username</string>
<string name="msg_foreign_lang">&#128220; Foreign language learning</string>
<string name="lbl_pyschology">&#129300; Pyschology</string>
<string name="lbl_tu">Tu</string>
<string name="lbl_eduempower">EDUEMPOWER</string>
<string name="lbl_july_2023">July, 2023</string>
<string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
<string name="msg_learn_new_thing">Learn new things and develop your
problem solving skills </string>
<string name="msg_student_instruc">Student/Instructor</string>
<string name="msg_forgot_password2">Forgot Password
Please enter the email address you\u2019d like your password reset information sent to</string>
<string name="msg_already_have_an2">Already have an account? </string>
<string name="msg_content_crea"> &#127916; Content Creation</string>
<string name="msg_already_have_an3"> Already have an account? Sign in</string>
<string name="msg_video_editi">&#127902;️ Video Editing</string>
<string name="lbl_30">30</string>
<string name="lbl_31">31</string>
<string name="lbl_su">Su</string>
<string name="lbl_password">Password</string>
<string name="msg_explore_your_ne">Explore your
new skills today</string>
<string name="msg_mobile_appl">&#128241;️ Mobile Application Development</string>
<string name="lbl_instructor">Instructor</string>
<string name="lbl_marks_grade">Marks/Grade</string>
<string name="msg_machine_lear">&#128190; Machine Learning</string>
<string name="lbl_finance">&#128176; Finance</string>
<string name="lbl_th">Th</string>
<string name="lbl_marketing">&#128200;Marketing</string>
<string name="lbl_science">&#128300; Science</string>
<string name="lbl_survey">SURVEY</string>
<string name="lbl_20">20</string>
<string name="msg_please_enter_th">Please enter the email address you\u2019d like your password reset information sent to</string>
<string name="lbl_middle_school">Middle school</string>
<string name="lbl_23">23</string>
<string name="lbl_24">24</string>
<string name="lbl_21">21</string>
<string name="msg_software_dev">&#128187; Software development</string>
<string name="lbl_22">22</string>
<string name="lbl_arts">&#127912;Arts </string>
<string name="lbl_27">27</string>
<string name="lbl_28">28</string>
<string name="lbl_25">25</string>
<string name="lbl_26">26</string>
<string name="lbl_college">College</string>
<string name="msg_you_can_learn_v">You can learn various kinds of
courses in your hand</string>
<string name="msg_empower_your_ed">Empower your
education to next level</string>
<string name="lbl_29">29</string>
<string name="lbl_sa">Sa</string>
<string name="lbl_qualification">Qualification</string>
<string name="lbl_log_in">LOG IN</string>
<string name="msg_full_name_email">Full name
Email address
Phone number
Birth Date                    Gender
Educational details</string>
<string name="lbl_12">12</string>
<string name="lbl_13">13</string>
<string name="lbl_business">&#127915;Business</string>
<string name="lbl_10">10</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_11">11</string>
<string name="lbl_send">Send</string>
<string name="lbl_sign_up2">sign up</string>
<string name="lbl_16">16</string>
<string name="lbl_17">17</string>
<string name="lbl_14">14</string>
<string name="lbl_high_school">High school</string>
<string name="lbl_15">15</string>
<string name="msg_username_email">Username
Email address
Phone number
Birth Date                    Gender
Educational status
Password
Confirm password</string>
<string name="lbl_18">18</string>
<string name="lbl_19">19</string>
<string name="lbl_skip">Skip</string>
<string name="lbl_student">Student</string>
<string name="lbl_register">REGISTER</string>
<string name="lbl">&gt;</string>
<string name="lbl_done">done</string>
<string name="lbl_log_in2">lOG IN</string>
<string name="lbl_register_as">REGISTER AS</string>
<string name="lbl_01">01</string>
<string name="lbl_primary_school">Primary school</string>
<string name="lbl_02">02</string>
<string name="msg_example_example">example@example.com</string>
<string name="lbl_05">05</string>
<string name="lbl_06">06</string>
<string name="lbl_03">03</string>
<string name="lbl_04">04</string>
<string name="lbl_09">09</string>
<string name="lbl_07">07</string>
<string name="lbl_08">08</string>
<string name="lbl_edu">EDU</string>
<string name="lbl_photography">&#128247; Photography</string>
<string name="lbl_robotics"> &#129522;Robotics</string>
<string name="lbl_forgot_password">Forgot Password
</string>
<string name="msg_please_select_b">Please select based on your interest</string>
<string name="lbl_empower">EMPOWER</string>
<string name="msg_web_developm">&#128187; Web Development</string>
<string name="lbl_institute">Institute</string>
<string name="lbl_architecture">⛩️ Architecture</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
</resources>
