<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgotPasswordMessageVM" type="com.jiahuisapplication.app.modules.forgotpasswordmessage.data.viewmodel.ForgotPasswordMessageVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearForgotpassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescription"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_50pxv"
            android:layout_width="match_parent"
            android:text="@{forgotPasswordMessageVM.forgotPasswordMessageModel.txtDescription}"
            style="@style/txtSorabold20" tools:text="@string/msg_forgot_password2"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_800_radius_8"
            android:ellipsize="end"
            android:hint="@string/msg_example_example"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_9pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@={forgotPasswordMessageVM.forgotPasswordMessageModel.etEmailValue}"
            android:textColorHint="@color/gray_600"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackcancel"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginTop="@dimen/_38pxv" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearRowcancel"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_44pxh"
                android:layout_marginStart="@dimen/_44pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCancel"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.57"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{forgotPasswordMessageVM.forgotPasswordMessageModel.txtCancel}"
                    style="@style/txtSoraregular20" tools:text="@string/lbl_cancel"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSend"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_83pxh"
                    android:layout_weight="0.43"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{forgotPasswordMessageVM.forgotPasswordMessageModel.txtSend}"
                    style="@style/txtSoraregular20" tools:text="@string/lbl_send"/>
            </LinearLayout>
            <FrameLayout android:id="@+id/frameStacklinefortyfive"
                android:layout_gravity="start"
                android:layout_height="@dimen/_56pxv" android:layout_width="match_parent">
                <View android:background="@color/black_900_3f"
                    android:id="@+id/lineLineFortyFive"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_10pxv" android:layout_width="@dimen/_301pxh"/>
                <View android:background="@color/black_900_3f"
                    android:id="@+id/lineLineFortySix"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_56pxv"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_40pxh" android:layout_width="@dimen/_1pxh"/>
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
