<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerPageVM" type="com.jiahuisapplication.app.modules.registerpage.data.viewmodel.RegisterPageVM"/>
    </data>
    <FrameLayout android:id="@+id/frameRegisterpage"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">

        <ImageView
            android:id="@+id/imageBackgroundTwo"
            imageRes="@{@drawable/img_background2}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_background2" />
        <LinearLayout android:id="@+id/linearColumnregisteras"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_33pxv"
            android:layout_marginEnd="@dimen/_51pxh"
            android:layout_marginStart="@dimen/_51pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtREGISTERAS"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{registerPageVM.registerPageModel.txtREGISTERAS}"
                style="@style/txt_1" tools:text="@string/lbl_register_as"/>
            <FrameLayout android:id="@+id/frameStackinputfieldt"
                android:layout_gravity="start"
                android:layout_height="@dimen/_135pxv"
                android:layout_marginTop="@dimen/_55pxv"
                android:layout_width="@dimen/_290pxh" style="@style/groupStylecornerRadius">
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_8"
                    android:id="@+id/viewInputFieldT"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_48pxv"
                    android:layout_marginBottom="@dimen/_10pxv" android:layout_width="@dimen/_290pxh"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_8"
                    android:id="@+id/viewInputFieldTOne"
                    android:layout_gravity="bottom|start"
                    android:layout_height="@dimen/_48pxv"
                    android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_290pxh"/>
                <LinearLayout android:id="@+id/linearColumnstudent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtStudent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_9pxh"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{registerPageVM.registerPageModel.txtStudent}"
                        style="@style/txtPoppinsregular20" tools:text="@string/lbl_student"/>
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtInstructor"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_40pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{registerPageVM.registerPageModel.txtInstructor}"
                        style="@style/txtPoppinsregular20" tools:text="@string/lbl_instructor"/>
                </LinearLayout>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtConfirmation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_299pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{registerPageVM.registerPageModel.txtConfirmation}"
                style="@style/txtPoppinsregular17" tools:text="@string/msg_already_have_an"/>
        </LinearLayout>
    </FrameLayout>
</layout>
