<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginPageVM" type="com.jiahuisapplication.app.modules.loginpage.data.viewmodel.LoginPageVM"/>
    </data>
    <FrameLayout android:id="@+id/frameLoginpage"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageBackgroundTwo"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_background2}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_background2"/>
        <LinearLayout android:id="@+id/linearColumnlogin"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_29pxv"
            android:layout_marginEnd="@dimen/_50pxh"
            android:layout_marginStart="@dimen/_50pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtLOGIN"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginPageVM.loginPageModel.txtLOGIN}"
                style="@style/txt_1" tools:text="@string/lbl_log_in"/>
            <FrameLayout
                android:id="@+id/frameSpinnerGroupTwo"
                android:layout_height="@dimen/_44pxv"
                android:layout_marginEnd="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_41pxv"
                android:layout_width="match_parent">

                <!-- This is a custom background for the Spinner -->
                <FrameLayout
                    android:id="@+id/frameSpinnerBackground"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_44pxv"
                    android:layout_width="match_parent"
                    style="@style/groupStylewhite_A700cornerRadius">

                    <!-- Add your ImageView inside the custom background if needed -->
                    <TextView
                        android:id="@+id/txtUsername2"
                        style="@style/txtPoppinsregular18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/_44pxh"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_marginEnd="@dimen/_44pxh"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@{loginPageVM.loginPageModel.txtUsername}"
                        tools:text="@string/lbl_username" />

                    <ImageView
                        android:id="@+id/imageUserSpinner"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_15pxh"
                        android:layout_marginStart="@dimen/_15pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_user"/>

                </FrameLayout>

                <!-- Your Spinner -->

            </FrameLayout>
            <FrameLayout android:id="@+id/frameStackuser"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_44pxv"
                android:layout_marginEnd="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_26pxv" android:layout_width="@dimen/_290pxh">
                <FrameLayout android:id="@+id/frameInputFieldT"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_44pxv"
                    android:layout_width="@dimen/_290pxh" style="@style/groupStylewhite_A700cornerRadius">
                    <ImageView android:id="@+id/imageUser"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_15pxh"
                        android:layout_marginStart="@dimen/_15pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                </FrameLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtUsername"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_44pxh"
                    android:layout_marginStart="@dimen/_44pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{loginPageVM.loginPageModel.txtUsername}"
                    style="@style/txtPoppinsregular18" tools:text="@string/lbl_username"/>
            </FrameLayout>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:drawablePadding="@dimen/_10pxh"
                android:drawableStart="@drawable/img_lock"
                android:ellipsize="end"
                android:hint="@string/lbl_password"
                android:id="@+id/etInputFieldT"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_14pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@={loginPageVM.loginPageModel.etInputFieldTValue}"
                android:textColorHint="@color/gray_600"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtForgotpassword"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginPageVM.loginPageModel.txtForgotpassword}"
                style="@style/txtPoppinsregular14" textUnderline="true" tools:text="@string/msg_forgot_password"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLogInOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.06"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_log_in2"
                android:textAllCaps="true"
                style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_log_in2"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtConfirmation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_192pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{loginPageVM.loginPageModel.txtConfirmation}"
                style="@style/txtPoppinsregular17" tools:text="@string/msg_don_t_have_an_a"/>
        </LinearLayout>
    </FrameLayout>
</layout>
